--- a/src/css/header-styles.css
+++ b/src/css/header-styles.css
@@ -34,7 +34,7 @@
     color: white;
     text-decoration: none;
     font-size: 1.2rem;
-    padding: 5px 10px;
+    padding: 10px 10px;
 }
 
 .top-nav a:hover {
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: row;
     padding-right: 1.5%;
-    gap: 15px;
+    gap: 10px;
 }
 
 .social-icons img {
@@ -57,8 +57,12 @@
 .icon-button {
     background: none;
     border: none;
-    padding: 5px 10px;
+    padding: 10px 10px;
     cursor: pointer;
+}
+
+#x-logo-button {
+    padding: 10px 12px;
 }
 
 .social-icons .icon-button .discord-logo {
@@ -69,7 +73,7 @@
     width: 24px;
 }
 
-.icon-button a:hover {
+.icon-button:hover {
     background-color: #333333;
     border-radius: 10px;
 }
