Add styles for hamburger menu. Fix logic with welcomePage component

--- a/src/css/community-styles.css
+++ b/src/css/community-styles.css
@@ -71,3 +71,10 @@
 .x-logo {
     width: 24px;
 }
+
+@media (max-width: 1100px) {
+    .community-box {
+        background-image: url('../images/community-background-smaller-screen.png');
+    }
+
+}
