--- a/src/css/about-styles.css
+++ b/src/css/about-styles.css
@@ -13,9 +13,7 @@
     display: flex;
     flex-direction: column;
     background-color: rgb(26, 26, 46, 0.9);
-    width: 60%;
-    max-width: 60%;
-    padding: 3%;
+    max-width: 75%;
     font-family: "Press Start 2P", serif;
     line-height: 1.6;
     color: white;
@@ -27,8 +25,22 @@
 }
 
 .about p {
+    padding-left: 3%;
     margin-bottom: 20px;
-    text-align: justify;
+    text-align: left;
+}
 
+@media (min-width: 1101px) {
+    .about .about-content {
+        width: 60%;
+        padding: 3%;
+    }
+}
+
+@media (max-width: 1100px) {
+    .about .about-content {
+        width: 75%;
+        padding: 5%;
+    }
 }
 
