--- a/src/css/roadmap-styles.css
+++ b/src/css/roadmap-styles.css
@@ -14,8 +14,7 @@
     flex-direction: column;
     align-items: center;
     background-color: rgb(26, 26, 46, 0.9);
-    width: 60%;
-    padding: 5%;
+
     font-family: "Press Start 2P", serif;
     line-height: 1.6;
     color: white;
@@ -30,4 +29,18 @@
 .roadmap h2 {
     text-align: center;
     margin-bottom: 2%;
+}
+
+@media (min-width: 1101px) {
+    .roadmap .roadmap-content {
+        width: 60%;
+        padding: 3%;
+    }
+}
+
+@media (max-width: 1100px) {
+    .roadmap .roadmap-content {
+        width: 75%;
+        padding: 5%;
+    }
 }
