--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,12 +21,20 @@ html {
         height: auto;
     }
 
+    .hero-section-text h1 {
+        font-size: 1.3rem;
+    }
+
     .community-box {
         background-image: url('../images/community-background-smaller-screen.png');
     }
 
     body {
         font-size: 14px;
+    }
+
+    footer {
+        font-size: 12px;
     }
     h1 { font-size: 24px; }
     h2 { font-size: 20px; }
@@ -43,7 +51,7 @@ html {
     }
 
     .hero-section-text h1 {
-        font-size: 2rem;
+        font-size: 1.7rem;
     }
 
     .roadmap .roadmap-image {
@@ -125,12 +133,12 @@ html {
     }
 
     body {
-        font-size: 20px;
+        font-size: 18px;
     }
-    h1 { font-size: 36px; }
-    h2 { font-size: 32px; }
-    h3 { font-size: 28px; }
-    p { font-size: 20px; }
+    h1 { font-size: 34px; }
+    h2 { font-size: 30px; }
+    h3 { font-size: 26px; }
+    p { font-size: 18px; }
     .container { padding: 30px; }
 }
 
@@ -153,11 +161,11 @@ html {
     }
 
     .hero-section-text h1 {
-        font-size: 3rem;
+        font-size: 2.4rem;
     }
 
     .roadmap .roadmap-image {
-        width: 445px;
+        width: 425px;
         height: auto;
     }
 
@@ -166,12 +174,12 @@ html {
     }
 
     body {
-        font-size: 22px;
+        font-size: 20px;
     }
-    h1 { font-size: 40px; }
-    h2 { font-size: 36px; }
-    h3 { font-size: 32px; }
-    p { font-size: 22px; }
+    h1 { font-size: 36px; }
+    h2 { font-size: 32px; }
+    h3 { font-size: 27px; }
+    p { font-size: 20px; }
     .container { padding: 40px; }
 }
 
