--- a/src/css/welcome-window-styles.css
+++ b/src/css/welcome-window-styles.css
@@ -13,8 +13,9 @@
     border-radius: 20px;
     padding: 30px 2%;
     white-space: pre-line;
-    width: 55%;
-    height: 350px;
+    width: 63%;
+    max-height: 400px;
+    height: auto;
     line-height: 2;
 }
 
